Add delete lesson

--- a/app/views/lessons/show.html.erb
+++ b/app/views/lessons/show.html.erb
@@ -5,3 +5,6 @@
 <h4><%= @lesson.number %></h4>
 
 <p><%= link_to "Edit Lesson", edit_lesson_path(@lesson) %></p>
+<p><%= link_to "Delete Lesson", lesson_path(@lesson),
+                               :data => {:confirm => "You sure?!",
+                                         :method => "delete" }%></p>
