Add next method to lesson

--- a/app/views/lessons/show.html.erb
+++ b/app/views/lessons/show.html.erb
@@ -8,3 +8,6 @@
 <p><%= link_to "Delete Lesson", lesson_path(@lesson),
                                :data => {:confirm => "You sure?!",
                                          :method => "delete" }%></p>
+<p>
+  <%= link_to "Next Lesson", lesson_path(@lesson.next) %>
+</p>
