--- a/app/views/lessons/show.html.erb
+++ b/app/views/lessons/show.html.erb
@@ -7,7 +7,16 @@
 <p><%= link_to "Edit Lesson", edit_lesson_path(@lesson) %></p>
 <p><%= link_to "Delete Lesson", lesson_path(@lesson),
                                :data => {:confirm => "You sure?!",
-                                         :method => "delete" }%></p>
+                                     :method => "delete" }%></p>
+
+<% if @lesson.next %>
 <p>
   <%= link_to "Next Lesson", lesson_path(@lesson.next) %>
 </p>
+<% end %>
+
+<% if @lesson.previous %>
+<p>
+  <%= link_to "Previous Lesson", lesson_path(@lesson.previous) %>
+</p>
+<% end %>
