--- a/app/views/sections/show.html.erb
+++ b/app/views/sections/show.html.erb
@@ -2,6 +2,19 @@
 
 <h1><%= @section.name %></h1>
 
+<% if @section.lessons.any? %>
+  <h4>Lessons for this section:</h4>
+
+  <ul>
+    <% @section.lessons.each do |lesson| %>
+    <li>
+      <%= lesson.name %>
+    </li>
+    <% end %>
+  </ul>
+  <% else %>
+  <p>There are no lessons yet</p>
+  <% end %>
 
 <p><%= link_to "Edit Section", edit_section_path(@section) %></p>
 <p><%= link_to "Delete Section", section_path(@section),
