--- a/app/views/sections/show.html.erb
+++ b/app/views/sections/show.html.erb
@@ -8,7 +8,7 @@
   <ul>
     <% @section.lessons.each do |lesson| %>
     <li>
-      <%= lesson.name %>
+      <%= link_to lesson.name, lesson_path(lesson) %>
     </li>
     <% end %>
   </ul>
